--- a/public/locales/fr/translations.json
+++ b/public/locales/fr/translations.json
@@ -6,6 +6,18 @@
     "toggle": "EN",
     "join_beta": "Rejoindre la BETA"
   },
+  "hero": {
+    "title": "La gestion immobilière <span class=\"gradient-text\">réinventée</span>",
+    "subtitle": "Une plateforme tout-en-un pour la gestion de vos biens immobiliers",
+    "cta": "Rejoindre la liste d'attente"
+  },
+  "mission": {
+    "title": "Notre <span class=\"gradient-text\">mission</span>",
+    "description1": "PlexView simplifie la gestion immobilière en combinant une interface intuitive, des outils puissants et un réseau de partenaires qualifiés pour créer une expérience sans friction.",
+    "description2": "Notre objectif est de vous faire gagner du temps et de l'énergie pour vous concentrer sur ce qui compte vraiment : développer votre patrimoine immobilier.",
+    "values": ["Simplicité", "Efficacité", "Innovation"],
+    "imageAlt": "Dashboard PlexView sur tablette"
+  },
   "betaSignup": {
     "title": "Rejoignez la <span class=\"gradient-text\">BETA</span>",
     "subtitle": "Soyez parmi les premiers à découvrir Plexio et bénéficiez d'avantages exclusifs",
@@ -24,6 +36,50 @@
     "submit": "Rejoindre la liste d'attente",
     "processing": "Traitement...",
     "limited": "Les places sont limitées. Nous vous contacterons dès qu'une place sera disponible."
+  },
+  "features": {
+    "title": "Fonctionnalités <span class=\"gradient-text\">puissantes</span>",
+    "subtitle": "Des outils conçus pour simplifier chaque aspect de la gestion immobilière",
+    "items": [
+      {
+        "icon": "fa-chart-line",
+        "title": "Tableau de bord intelligent",
+        "description": "Visualisez toutes vos opérations avec des données en temps réel et des indicateurs personnalisables."
+      },
+      {
+        "icon": "fa-tools",
+        "title": "Maintenance automatisée",
+        "description": "Gérez facilement les demandes d'intervention et collaborez avec des professionnels qualifiés."
+      },
+      {
+        "icon": "fa-file-contract",
+        "title": "Gestion des baux",
+        "description": "Création, signature et suivi de vos contrats de location en quelques clics."
+      },
+      {
+        "icon": "fa-credit-card",
+        "title": "Paiements simplifiés",
+        "description": "Percevez vos loyers automatiquement et suivez vos revenus locatifs sans effort."
+      },
+      {
+        "icon": "fa-comments",
+        "title": "Communication centralisée",
+        "description": "Échangez facilement avec vos locataires et prestataires depuis une interface unique."
+      },
+      {
+        "icon": "fa-file-invoice-dollar",
+        "title": "Comptabilité intégrée",
+        "description": "Suivez vos finances et générez des rapports détaillés pour optimiser votre rentabilité."
+      }
+    ],
+    "highlightTitle": "Une interface pensée pour <span class=\"gradient-text\">vous</span>",
+    "highlightDescription": "Notre interface intuitive vous permet de gérer l'ensemble de votre portefeuille immobilier depuis un seul endroit, sur tous vos appareils.",
+    "highlightList": [
+      "Personnalisable selon vos besoins",
+      "Compatible avec mobile, tablette et ordinateur",
+      "Mise à jour en temps réel"
+    ],
+    "imageAlt": "Interface PlexView sur plusieurs appareils"
   },
   "faq": {
     "title": "Questions <span class=\"gradient-text\">fréquentes</span>",
@@ -50,5 +106,13 @@
         "answer": "Pour rejoindre notre programme beta, il vous suffit de remplir le formulaire d'inscription en bas de page. Notre équipe vous contactera pour vous présenter la plateforme et vous accompagner dans la prise en main de Plexio."
       }
     ]
+  },
+  "footer": {
+    "slogan": "La gestion immobilière réinventée",
+    "mission": "Mission",
+    "features": "Fonctionnalités",
+    "faq": "FAQ",
+    "join_beta": "Rejoindre la BETA",
+    "copyright": "Tous droits réservés."
   }
 }
