Fix mobile header visibility

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -82,7 +82,7 @@
     "imageAlt": "PlexView interface on multiple devices"
   },
   "faq": {
-    "title": "Frequently <span class=\"gradient-text\">Asked Questions</span>",
+    "title": "Question about <span class=\"gradient-text\">PlexView</span>?",
     "subtitle": "Everything you need to know about PlexView",
     "items": [
       {
