--- a/public/locales/fr/translations.json
+++ b/public/locales/fr/translations.json
@@ -82,7 +82,7 @@
     "imageAlt": "Interface PlexView sur plusieurs appareils"
   },
   "faq": {
-    "title": "Questions <span class=\"gradient-text\">fréquentes</span>",
+    "title": "Des questions sur <span class=\"gradient-text\">PlexView</span>?",
     "subtitle": "Tout ce que vous devez savoir sur PlexView",
     "items": [
       {
