Features not working

--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -83,7 +83,7 @@
     "imageAlt": "PlexView interface on multiple devices"
   },
   "faq": {
-    "title": "Question about <span class=\"gradient-text\">PlexView</span>?",
+    "title": "Question about <span class=\"gradient-text\">PlexView</span>? Answers about PlexView.",
     "subtitle": "Everything you need to know about PlexView",
     "items": [
       {
