--- a/public/locales/fr/translations.json
+++ b/public/locales/fr/translations.json
@@ -83,7 +83,7 @@
     "imageAlt": "Interface PlexView sur plusieurs appareils"
   },
   "faq": {
-    "title": "Des questions sur <span class=\"gradient-text\">PlexView</span>?",
+    "title": "Des questions sur <span class=\"gradient-text\">PlexView</span>? Des réponses sur <span class=\"gradient-text\">PlexView</span>.",
     "subtitle": "Tout ce que vous devez savoir sur PlexView",
     "items": [
       {
