--- a/locales/en/translations.json
+++ b/locales/en/translations.json
@@ -63,7 +63,7 @@
       },
       {
         "icon": "fa-tools",
-        "title": "Automated Maintenance",
+        "title": "Innovative and Simplified Maintenance",
         "description": "Easily manage maintenance requests and collaborate with qualified professionals."
       },
       {
@@ -102,19 +102,19 @@
     "items": [
       {
         "question": "Who is PlexView for?",
-        "answer": "PlexView is for all real estate professionals: individual owners, property managers, condominium associations, and real estate agencies. Our platform adapts to the size of your portfolio, whether you own a studio or manage hundreds of units."
+        "answer": "PlexView is designed for all property owners looking to simplify, optimize, and professionalize the management of their rental properties.\n\n Whether you’re a first-time landlord, an experienced owner, managing a larger real estate portfolio, or a property management business, the platform adapts to your needs and reality.\n\n PlexView is also a valuable asset for building contractors seeking to grow their clientele and access qualified mandates directly connected to the residential rental market."
       },
       {
         "question": "How is my data protected?",
-        "answer": "Security is our priority. All your data is end-to-end encrypted and we use secure servers compliant with GDPR standards. We perform regular backups and our systems are audited by cybersecurity experts."
+        "answer": "The security of your information is a top priority. All data is encrypted and hosted on secure servers that comply with personal data protection standards. You remain in full control of your data at all times."
       },
       {
         "question": "What makes PlexView different from other solutions?",
-        "answer": "PlexView stands out with its modern and intuitive interface, proactive management approach (anticipatory alerts, optimization suggestions), and a connected ecosystem of qualified partners. Our solution is designed to save you time while optimizing the profitability of your assets."
+        "answer": "PlexView is redefining property management by combining technology, efficiency, and peace of mind.\n\n Designed for landlords who want to stay in control while reducing mental load, our platform merges intuitive management tools with an integrated network of qualified contractors, ready to step in for your building maintenance.\n\n Say goodbye to partial or rigid solutions. PlexView goes far beyond simple accounting or rental tracking: it’s a complete, flexible, and transparent approach that helps you save time, reduce surprises, and maintain better oversight — without giving up your autonomy.\n\n In one word: simplicity, performance, and service that meets your expectations."
       },
       {
         "question": "What are PlexView's prices?",
-        "answer": "We offer several plans tailored to different needs, from the Essential offer for small owners to the Enterprise offer for professional managers. Final prices will be announced at the official launch, but beta participants will benefit from lifetime preferential conditions."
+        "answer": "Our pricing plans are based on a flexible model tailored to the size of your property portfolio. Whether you manage a few units or several dozen, you’ll have full access to all features without unnecessary fees.\n Official pricing will be revealed at the launch of the beta version."
       },
       {
         "question": "How do I join the beta?",
