--- a/public/locales/en/translations.json
+++ b/public/locales/en/translations.json
@@ -8,9 +8,9 @@
   },
   "hero": {
     "title": "Property management <span class=\"gradient-text\">reinvented</span>",
-    "subtitle": "An all-in-one platform for managing your real estate assets",
+    "subtitle": "An all-in-one platform for managing your rental properties",
     "cta": "Join the waiting list",
-    "poweredBy": "Powered by Nolet Andrews Group"
+    "poweredBy": "Powered by"
   },
   "mission": {
     "title": "Our <span class=\"gradient-text\">mission</span>",
