--- a/public/locales/fr/translations.json
+++ b/public/locales/fr/translations.json
@@ -8,9 +8,9 @@
   },
   "hero": {
     "title": "La gestion immobilière <span class=\"gradient-text\">réinventée</span>",
-    "subtitle": "Une plateforme tout-en-un pour la gestion de vos biens immobiliers",
+    "subtitle": "Une plateforme tout-en-un pour la gestion de vos logements locatifs",
     "cta": "Rejoindre la liste d'attente",
-    "poweredBy": "Propulsé par le groupe Nolet Andrews"
+    "poweredBy": "Propulsé par"
   },
   "mission": {
     "title": "Notre <span class=\"gradient-text\">mission</span>",
